play song/queue immediately